fix: padding alignment

--- a/src/pages/ContactPage/ContactPage.module.scss
+++ b/src/pages/ContactPage/ContactPage.module.scss
@@ -61,7 +61,7 @@
 
   @media screen and (width <= 360px) {
     margin-top: 6px;
-    padding-bottom: 32px;
+    padding-bottom: 48px;
 
     font-size: 20px;
     line-height: 1.2;
