--- a/src/pages/ContactPage/ContactsContainer/ContactsContainer.module.scss
+++ b/src/pages/ContactPage/ContactsContainer/ContactsContainer.module.scss
@@ -8,11 +8,6 @@
     margin-bottom: 228px;
   }
 
-  // @media screen and (width <= 870px) {
-  //   flex-direction: column;
-  //   justify-content: center;
-  // }
-
   @media screen and (width <= 768px) {
     margin-bottom: 127px;
   }
@@ -38,7 +33,7 @@
   margin-right: 200px;
 
   @media screen and (width <= 1280px) {
-    row-gap: 53px;
+    row-gap: 61px;
     margin-right: 60px;
   }
 
@@ -53,6 +48,10 @@
 
 .secondContainer {
   margin-right: 0;
+
+  @media screen and (width <= 1280px) {
+    row-gap: 48px;
+  }
 
   @media screen and (width <= 650px) {
     margin-top: 48px;
@@ -144,11 +143,6 @@
 .iconLink {
   width: 80px;
   height: 80px;
-
-  @media screen and (width <= 1280px) {
-    width: 60px;
-    height: 60px;
-  }
 
   @media screen and (width <= 870px) {
     width: 40px;
